<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:gravity="center_vertical|center_horizontal"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="clicked('time')"
        app:cardCornerRadius="@dimen/spacing_medium"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/lyt_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/clickListener"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="400dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Sample"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="#424242"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/unknown_avatar" />

                <!--<TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01.30"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/material_grey_600" />
    -->
                <!--<TextView-->
                <!--android:id="@+id/content"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:maxLines="1"-->
                <!--android:singleLine="true"-->
                <!--android:text="Description"-->
                <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
                <!--android:textColor="@color/material_grey_600" />-->
            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
