...
                android:layout_height="60dp"
                android:layout_weight=".2"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/searchStudents"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="1dp"
                    android:background="@color/colorButton"
                    android:onClick="searchIntent"
                    android:text="Search"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

...
